--- a/dash_a.html
+++ b/dash_a.html
@@ -135,6 +135,7 @@
         <!-- Top Bar End -->
         <!-- ========== Left Sidebar Start ========== Pro-->
 
+        <!-- ========== Left Sidebar Start ========== Pro-->
         <div class="left side-menu">
             <div class="sidebar-inner slimscrollleft">
                 <!--- Divider -->
@@ -153,18 +154,19 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Purchase</a></li>
-                                <li><a href="#" target="_self">Purchase List</a></li>
+                                <li><a href="../purchases/add_purch.html" target="_self">New Purchase</a></li>
+                                <li><a href="../purchases/purch_list.html" target="_self">Purchase List</a></li>
                             </ul>
                         </li>
-                        
+
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary"><i
                                     class="ti-shopping-cart-full"></i><span> Sales </span> <span
                                     class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">New Sales</a></li>
-                                <li><a href="#" target="_self">Sales List</a></li>
+                                <li><a href="../sales/add_sales.html" target="_self">New Sales</a></li>
+                                <li><a href="../sales/sales_list.html" target="_self">Sales List</a></li>
+                                <li><a href="../sales/credit_sales.html" target="_self">Credit Sales</a></li>
                             </ul>
                         </li>
 
@@ -194,6 +196,7 @@
                                     class="ti-settings"></i><span> Settings </span> <span class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
                                 <li><a href="#" target="_self">Company Profile</a></li>
+                                <li><a href="#" target="_self">Add Branches</a></li>
                                 <li><a href="#" target="_self">Change Password</a></li>
                                 <li><a href="#" target="_self">Database Backup</a></li>
                             </ul>
