--- a/header.html
+++ b/header.html
@@ -92,6 +92,7 @@
                 <div class="clearfix"></div>
             </div>
         </div>
+        <!-- end of left slide bar -->
     </div>
     <!-- end content -->
     </div>
