updated add_purchases page

--- a/dash_a.html
+++ b/dash_a.html
@@ -142,7 +142,7 @@
                 <div id="sidebar-menu">
                     <ul>
                         <li>
-                            <a href="../dash_a.html" class="waves-effect waves-primary">
+                            <a href="./dash_a.html" class="waves-effect waves-primary">
                                 <i class="ti-home"></i><span>Dashboard</span>
                                 <span class="badge badge-primary pull-right">#</span>
                             </a>
@@ -154,8 +154,8 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="../purchases/add_purch.html" target="_self">New Purchase</a></li>
-                                <li><a href="../purchases/purch_list.html" target="_self">Purchase List</a></li>
+                                <li><a href="./purchases/add_purch.html" target="_self">New Purchase</a></li>
+                                <li><a href="./purchases/purch_list.html" target="_self">Purchase List</a></li>
                             </ul>
                         </li>
 
@@ -164,9 +164,9 @@
                                     class="ti-shopping-cart-full"></i><span> Sales </span> <span
                                     class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="../sales/add_sales.html" target="_self">New Sales</a></li>
-                                <li><a href="../sales/sales_list.html" target="_self">Sales List</a></li>
-                                <li><a href="../sales/credit_sales.html" target="_self">Credit Sales</a></li>
+                                <li><a href="./sales/add_sales.html" target="_self">New Sales</a></li>
+                                <li><a href="./sales/sales_list.html" target="_self">Sales List</a></li>
+                                <li><a href="./sales/credit_sales.html" target="_self">Credit Sales</a></li>
                             </ul>
                         </li>
 
@@ -176,7 +176,7 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">Sales Report</a></li>
+                                <li><a href="./reports/sales.html" target="_self">Sales Report</a></li>
                             </ul>
                         </li>
 
@@ -186,8 +186,8 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="../users/add.html" target="_self">New User</a></li>
-                                <li><a href="../users/ulist.html" target="_self">User List</a></li>
+                                <li><a href="./users/add.html" target="_self">New User</a></li>
+                                <li><a href="./users/ulist.html" target="_self">User List</a></li>
                             </ul>
                         </li>
 
@@ -195,10 +195,10 @@
                             <a href="javascript:void(0);" class="waves-effect waves-primary"><i
                                     class="ti-settings"></i><span> Settings </span> <span class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">Company Profile</a></li>
-                                <li><a href="#" target="_self">Add Branches</a></li>
-                                <li><a href="#" target="_self">Change Password</a></li>
-                                <li><a href="#" target="_self">Database Backup</a></li>
+                                <li><a href="./settings/profile.html" target="_self">Company Profile</a></li>
+                                <li><a href="./settings/branches.html" target="_self">Add Branches</a></li>
+                                <li><a href="./settings/p_code.html" target="_self">Change Password</a></li>
+                                <li><a href="./settings/db_bckp.html" target="_self">Database Backup</a></li>
                             </ul>
                         </li>
                     </ul>
