--- a/header.html
+++ b/header.html
@@ -60,7 +60,7 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">Sales Report</a></li>
+                                <li><a href="../reports/salesrpt.html" target="_self">Sales Report</a></li>
                             </ul>
                         </li>
 
@@ -79,10 +79,10 @@
                             <a href="javascript:void(0);" class="waves-effect waves-primary"><i
                                     class="ti-settings"></i><span> Settings </span> <span class="menu-arrow"></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="#" target="_self">Company Profile</a></li>
-                                <li><a href="#" target="_self">Add Branches</a></li>
-                                <li><a href="#" target="_self">Change Password</a></li>
-                                <li><a href="#" target="_self">Database Backup</a></li>
+                                <li><a href="../settings/profile.html" target="_self">Company Profile</a></li>
+                                <li><a href="../settings/branches.html" target="_self">Add Branches</a></li>
+                                <li><a href="../settings/p_code.html" target="_self">Change Password</a></li>
+                                <li><a href="../settings/db_bckp.html" target="_self">Database Backup</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -98,7 +98,8 @@
     </div>
 </body>
 
-    <!-- Custom main Js --- this stopped my Javascript validation and it too me more than two days to detect, i figured it out 0n 28th, July, 2022 07:11 am-->
-    <script src="../assets/js/jquery.app.js"></script> <!--feck link for the left navbar reponsive-->
+<!-- Custom main Js --- this stopped my Javascript validation and it too me more than two days to detect, i figured it out 0n 28th, July, 2022 07:11 am-->
+<script src="../assets/js/jquery.app.js"></script>
+<!--feck link for the left navbar reponsive-->
 
 </html>
