--- a/authentication/simple/login.html
+++ b/authentication/simple/login.html
@@ -132,7 +132,7 @@
                 <hr>
                 <small><a href="../../authentication/simple/forgot-password.html">Forgot
                     Password?</a>&nbsp;&nbsp;&nbsp;
-                  <a href="../../dash_a.html">Dashboard</a>
+                  <a href="../../dashboard/dash_a.html">Dashboard</a>
                 </small>
                 <div class="mb-3">
                   <input type="submit" value="LOGIN" class="btn btn-primary d-block w-100 mt-3">
