--- a/authentication/simple/reset-password.html
+++ b/authentication/simple/reset-password.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-  <title>Karibu Groceries | Login</title>
+  <title>Karibu Groceries | Reset</title>
 
   <!--    Favicons-->
   <!-- ===============================================-->
@@ -107,20 +107,35 @@
 
               <div class="row flex-between-center mb-2">
                 <div class="col-auto">
-                  <h5>Reset Password</h5>
+                  <h5>RESET PASSWORD</h5>
                 </div>
                 <div class="col-auto fs--1 text-600"><span class="mb-0 undefined">or</span> <span><a
-                      href="./login.html">Login</a></span></div>
+                      href="./login.html">LOGIN</a></span></div>
               </div>
-              <form class="mt-3" is="reset">
-                <div class="mb-3"><label class="form-label"></label>
-                  <input class="form-control" type="password" id="pwd1" name="pwd1" placeholder="New Password" required />
+              <form id="resetfrm" class="form">
+                <div class="form-field">
+                  <label for="email">Email:</label>
+                  <input type="text" name="email" id="email" autocomplete="off">
+                  <small></small>
+                </div>
+                <div class="form-field">
+                  <label for="pwdold">Old Password:</label>
+                  <input type="password" name="pwdold" id="pwdold" autocomplete="off">
+                  <small></small>
+                </div>
+                <div class="form-field">
+                  <label for="password">New Password:</label>
+                  <input type="password" name="password" id="password" autocomplete="off">
+                  <small></small>
+                </div>
+                <div class="form-field">
+                  <label for="confirm-password">Confirm New Password:</label>
+                  <input type="password" name="confirm-password" id="confirm-password" autocomplete="off">
+                  <small></small>
                 </div>
                 <div class="mb-3">
-                  <input class="form-control" type="password" id="pwd2" name="pwd2" placeholder="Confirm Password" required />
+                  <input type="submit" value="Set Password" class="btn btn-primary d-block w-100 mt-3">
                 </div>
-                <button class="btn btn-primary d-block w-100 mt-3" type="submit" name="submit"
-                  onsubmit="validatePassword()">Set password</button>
               </form>
             </div>
           </div>
@@ -167,7 +182,7 @@
   <script src="../../assets/js/theme.js"></script>
   <script src="../../assets/js/config.js"></script>
   <script src="../../vendors/overlayscrollbars/OverlayScrollbars.min.js"></script>
-  <script src="./js/app.js"></script>
+  <script src="./js/reset.js"></script>
   <script>
     var isRTL = JSON.parse(localStorage.getItem('isRTL'));
     if (isRTL) {
@@ -183,27 +198,6 @@
       userLinkRTL.setAttribute('disabled', true);
     }
   </script>
-  <script>
-    function validatePassword() {
-      var p = document.getElementById('pwd1').value,
-        errors = [];
-      if (p.length < 8) {
-        errors.push("Your password must be at least 8 characters");
-      }
-      if (p.search(/[a-z]/i) < 0) {
-        errors.push("Your password must contain at least one letter.");
-      }
-      if (p.search(/[0-9]/) < 0) {
-        errors.push("Your password must contain at least one digit.");
-      }
-      if (errors.length > 0) {
-        alert(errors.join("\n"));
-        return false;
-      }
-      return true;
-    }
-  </script>
-
 </body>
 
 </html>
