--- a/purchases/add_purch.html
+++ b/purchases/add_purch.html
@@ -26,9 +26,8 @@
 
     <!-- include header.html -->
     <!-- source-- https://stackoverflow.com/questions/18712338/make-header-and-footer-files-to-be-included-in-multiple-html-pages -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
-        </script>
+    <script src="../js_header/jquery-3.3.1.js"></script>
+
     <script>
         $(function () {
             $("#header").load("../header.html");
@@ -47,7 +46,7 @@
             <!-- LOGO -->
             <div class="topbar-left">
                 <div class="text-center">
-                    <a href="../dash_a.html" class="logo"><i class="mdi mdi-radar"></i> <span>Karibu
+                    <a href="../dashboard/dash_a.html" class="logo"><i class="mdi mdi-radar"></i> <span>Karibu
                             groceries</span></a>
                 </div>
             </div>
